# lv_gba_emu

./: .gitmodules  CMakeLists.txt  README.md  gba_port_evdev.c  gba_port_sdl2.c  install_rpi_autostart.sh  lv_conf.h  lv_drv_conf.h  main.c  main.cpp
gba_emu/: gba_emu.c  gba_emu.cpp  gba_emu.h  gba_internal.h  gba_memalign.c  gba_menu.c  gba_menu.h  gba_retro.c  gba_vfs_implementation.c  gba_view.c
lv_port/: lv_port.h  lv_port_mem.c  lv_port_sdl2.c  lv_port_win.c
port/: gba_port_audio.c  gba_port_rpi.c  gba_port_sdl2.c  gpa_port_rpi.c  lv_port_rpi.c  lv_port_sdl2.c  port.h
port/rpi/: st7789.c  st7789.h  wiring_pi_port.h
